--- a/clusters/default/nginx/ingress-nginx.yaml
+++ b/clusters/default/nginx/ingress-nginx.yaml
@@ -35,5 +35,14 @@ spec:
     controller:
       service:
         type: "NodePort"
+      nodeSelector:
+        ingress-ready: "true"
+      tolerations:
+      - effect: "NoSchedule"
+        key: "node-role.kubernetes.io/master"
+        operator: "Equal"
+      - effect: "NoSchedule"
+        key: "node-role.kubernetes.io/control-plane"
+        operator: "Equal"
     admissionWebhooks:
       enabled: false
