--- a/clusters/default/nginx/ingress-nginx.yaml
+++ b/clusters/default/nginx/ingress-nginx.yaml
@@ -32,6 +32,8 @@ spec:
         namespace: ingress-nginx
       interval: 12h
   values:
+    extraArgs:
+      default-ssl-certificate: "vega/dev-tls"
     controller:
       service:
         type: "ClusterIP"
