--- a/clusters/default/nginx/ingress-nginx.yaml
+++ b/clusters/default/nginx/ingress-nginx.yaml
@@ -32,6 +32,13 @@ spec:
         namespace: ingress-nginx
       interval: 12h
   values:
+    defaultBackend:
+      enabled: true
+      image:
+        repository: "dvdblk/custom-default-backend" # Change this to our own forked image with css
+        tag: "latest"
+        pullPolicy: "Always"
+      port: 8080
     extraArgs:
       default-ssl-certificate: "vega/dev-tls"
     controller:
