--- a/clusters/default/nginx/ingress-nginx.yaml
+++ b/clusters/default/nginx/ingress-nginx.yaml
@@ -42,6 +42,9 @@ spec:
     extraArgs:
       default-ssl-certificate: "vega/dev-tls"
     controller:
+      allowSnippetAnnotations: true
+      config:
+        annotations-risk-level: Critical
       service:
         type: "ClusterIP"
       hostPort:
