--- a/clusters/default/vega-system/kustomization.yaml
+++ b/clusters/default/vega-system/kustomization.yaml
@@ -2,7 +2,7 @@ namespace: vega-system
 namePrefix: vega-
 commonLabels:
   operator: vega
-  company: archetypical.software
+  company: archetypical-software
 resources:
 - operator-role.yaml
 - operator-role-binding.yaml
