--- a/clusters/default/vega-system/kustomization.yaml
+++ b/clusters/default/vega-system/kustomization.yaml
@@ -1,8 +1,11 @@
 namespace: vega-system
 namePrefix: vega-
-commonLabels:
-  operator: vega
-  company: archetypical-software
+labels:
+- pairs:
+    operator: vega
+    company: archetypical-software
+  includeSelectors: true
+ 
 resources:
 - operator-role.yaml
 - operator-role-binding.yaml
@@ -15,7 +18,7 @@ resources:
 images:
 - name: operator
   newName: archetypicalsoftware/vega-manager
-  newTag: 1.0.7
+  newTag: 0.0.3
 configMapGenerator:
 - name: webhook-config
   literals:
