--- a/modules/cert-manager/helm-repo.yaml
+++ b/modules/cert-manager/helm-repo.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: cert-manager
-  namespace: flux-system
+  namespace: cert-manager
 spec:
   interval: 24h
   url: https://charts.jetstack.io
