--- a/modules/nginx/ingress-nginx.yaml
+++ b/modules/nginx/ingress-nginx.yaml
@@ -25,7 +25,7 @@ spec:
   chart:
     spec:
       chart: ingress-nginx
-      version: "4.12.0"
+      version: "4.12.1"
       sourceRef:
         kind: HelmRepository
         name: ingress-nginx
@@ -35,6 +35,7 @@ spec:
     remediation:
       retries: -1
   upgrade:
+    force: true
     remediation:
       retries: -1
   values:
