--- a/modules/nginx/ingress-nginx.yaml
+++ b/modules/nginx/ingress-nginx.yaml
@@ -25,7 +25,7 @@ spec:
   chart:
     spec:
       chart: ingress-nginx
-      version: "4.12.0"
+      version: "*"
       sourceRef:
         kind: HelmRepository
         name: ingress-nginx
