--- a/modules/opentel/helm-release.yaml
+++ b/modules/opentel/helm-release.yaml
@@ -2,8 +2,9 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: opentel-operator
-  namespace: opentel
+  namespace: flux-system
 spec:
+  targetNamespace: opentel
   interval: 10m
   chart:
     spec:
@@ -12,7 +13,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: opentel
-        namespace: opentel
+        namespace: flux-system
       interval: 12h
   install:
     createNamespace: true
