--- a/modules/opentel/helm-repo.yaml
+++ b/modules/opentel/helm-repo.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: opentel
-  namespace: opentel
+  namespace: flux-system
 spec:
   interval: 24h
   url: https://open-telemetry.github.io/opentelemetry-helm-charts
