--- a/modules/prometheus/helm-release.yaml
+++ b/modules/prometheus/helm-release.yaml
@@ -2,8 +2,9 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: kube-prometheus-stack
-  namespace: prometheus
+  namespace: flux-system
 spec:
+  targetNamespace: prometheus
   interval: 10m
   chart:
     spec:
@@ -12,7 +13,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: prometheus-community
-        namespace: prometheus
+        namespace: flux-system
       interval: 12h
   install:
     createNamespace: true
@@ -24,6 +25,8 @@ spec:
     remediation:
       retries: -1
   values:
+    # TODO: migrate this to prometheus operator ?
+    namespaceOverride: prometheus
     cleanPrometheusOperatorObjectNames: true
     defaultRules:
       rules:
