--- a/modules/cert-manager/helm-release.yaml
+++ b/modules/cert-manager/helm-release.yaml
@@ -2,8 +2,9 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: cert-manager
-  namespace: cert-manager
+  namespace: flux-system
 spec:
+  targetNamespace: cert-manager
   interval: 10m
   chart:
     spec:
@@ -12,7 +13,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: cert-manager
-        namespace: cert-manager
+        namespace: flux-system
       interval: 12h
   install:
     createNamespace: true
