--- a/modules/cert-manager/helm-release.yaml
+++ b/modules/cert-manager/helm-release.yaml
@@ -16,10 +16,12 @@ spec:
         namespace: flux-system
       interval: 12h
   install:
+    crds: CreateReplace
     createNamespace: true
     remediation:
       retries: -1
   upgrade:
+    crds: CreateReplace
     remediation:
       retries: -1
   values:
