Fix typo in flux updater command in workflow
Corrected the command from 'dotnet flux-updater update' to 'dotnet flux-update update' in the GitHub Actions workflow to ensure the correct tool is executed.

--- a/.github/workflows/flux-updater.yml
+++ b/.github/workflows/flux-updater.yml
@@ -53,7 +53,7 @@ jobs:
         OUTPUT_FILE=$(mktemp)
         
         # Run the flux updater and capture output
-        dotnet flux-updater update --path . > "$OUTPUT_FILE" 2>&1
+        dotnet flux-update update --path . > "$OUTPUT_FILE" 2>&1
         
         # Read the output
         OUTPUT=$(cat "$OUTPUT_FILE")
