Add flux-update init step to workflow
Inserted 'dotnet flux-update init' before running the update command in the flux-updater GitHub Actions workflow to ensure proper initialization.

--- a/.github/workflows/flux-updater.yml
+++ b/.github/workflows/flux-updater.yml
@@ -52,6 +52,7 @@ jobs:
         # Create a temporary file to capture the output
         OUTPUT_FILE=$(mktemp)
         
+        dotnet flux-update init
         # Run the flux updater and capture output
         dotnet flux-update update --path . > "$OUTPUT_FILE" 2>&1
         
