--- a/.github/workflows/flux-updater.yml
+++ b/.github/workflows/flux-updater.yml
@@ -33,7 +33,7 @@ jobs:
         fi
     
     - name: Install Flux Updater tool
-      run: dotnet tool install --global Archetypical.Software.Flux.Updater
+      run: dotnet tool install --local Archetypical.Software.Flux.Updater
     
     - name: Configure Git
       run: |
@@ -52,9 +52,9 @@ jobs:
         # Create a temporary file to capture the output
         OUTPUT_FILE=$(mktemp)
         
-        dotnet flux-update init
+        dotnet tool run flux-update init
         # Run the flux updater and capture output
-        dotnet flux-update update --path . > "$OUTPUT_FILE" 2>&1
+        dotnet tool run flux-update update --path . > "$OUTPUT_FILE" 2>&1
         
         # Read the output
         OUTPUT=$(cat "$OUTPUT_FILE")
