--- a/.github/workflows/flux-updater.yml
+++ b/.github/workflows/flux-updater.yml
@@ -90,6 +90,9 @@ jobs:
     
     - name: Commit changes
       if: steps.flux_update.outputs.has_changes == 'true'
+      env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       run: |
         git add .
         git commit -m "chore: update Flux manifests via automated updater
@@ -104,11 +107,17 @@ jobs:
     
     - name: Push branch
       if: steps.flux_update.outputs.has_changes == 'true'
+      env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       run: |
         git push origin "$BRANCH_NAME"
     
     - name: Create Pull Request
       if: steps.flux_update.outputs.has_changes == 'true'
+      env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       uses: actions/github-script@v7
       with:
         script: |
