Add github-token input to github-script action
Explicitly sets the github-token input for the actions/github-script@v7 step using the GH_PAT secret. This ensures the script has the correct authentication context.

--- a/.github/workflows/flux-updater.yml
+++ b/.github/workflows/flux-updater.yml
@@ -125,6 +125,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       uses: actions/github-script@v7
       with:
+        github-token: ${{ secrets.GH_PAT }}
         script: |
           const prMessage = `${{ steps.flux_update.outputs.pr_message }}`;
           const fullOutput = `${{ steps.flux_update.outputs.full_output }}`;
