--- a/.github/workflows/flux-updater.yml
+++ b/.github/workflows/flux-updater.yml
@@ -122,49 +122,33 @@ jobs:
       if: steps.flux_update.outputs.has_changes == 'true'
       env:
           GH_PAT: ${{ secrets.GH_PAT }}
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-      uses: actions/github-script@v7
-      with:
-        github-token: ${{ secrets.GH_PAT }}
-        script: |
-          const prMessage = `${{ steps.flux_update.outputs.pr_message }}`;
-          const fullOutput = `${{ steps.flux_update.outputs.full_output }}`;
-          
-          // Create a more detailed PR body
-          const prBody = `## 🤖 Automated Flux Manifest Updates
-          
-          This PR was automatically created by the weekly Flux updater workflow.
-          
-          ### Changes Summary
-          ${prMessage}
-          
-          ### Full Tool Output
-          <details>
-          <summary>Click to expand full flux-updater output</summary>
-          
-          \`\`\`
-          ${fullOutput}
-          \`\`\`
-          </details>
-          
-          ### What's Next?
-          - Review the changes to ensure they look correct
-          - Test in a staging environment if available
-          - Merge when ready to deploy the updates
-          
-          ---
-          *This PR was created automatically by the [Flux Updater workflow](.github/workflows/flux-updater.yml)*`;
-          
-          const { data: pr } = await github.rest.pulls.create({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            title: `chore: weekly Flux manifest updates - ${new Date().toISOString().split('T')[0]}`,
-            head: process.env.BRANCH_NAME,
-            base: 'main',
-            body: prBody
-          });
-          
-          console.log(`Created PR #${pr.number}: ${pr.html_url}`);
+          GH_TOKEN: ${{ secrets.GH_PAT }}
+      run: |
+        # Create PR title with current date
+        PR_TITLE="chore: weekly Flux manifest updates - $(date +%Y-%m-%d)"
+        
+        # Create PR body with the flux update summary
+        PR_BODY="## 🤖 Automated Flux Manifest Updates
+        
+        This PR was automatically created by the weekly Flux updater workflow.
+        
+        ### Changes Summary
+        ${{ steps.flux_update.outputs.pr_message }}
+        
+        ### What's Next?
+        - Review the changes to ensure they look correct
+        - Test in a staging environment if available
+        - Merge when ready to deploy the updates
+        
+        ---
+        *This PR was created automatically by the [Flux Updater workflow](.github/workflows/flux-updater.yml)*"
+        
+        # Create the pull request using gh CLI
+        gh pr create \
+          --title "$PR_TITLE" \
+          --body "$PR_BODY" \
+          --base main \
+          --head "$BRANCH_NAME"
     
     - name: No changes notification
       if: steps.flux_update.outputs.has_changes == 'false'
