Fix sed pattern in flux-updater workflow
Removes the unnecessary caret (^) from the sed pattern used to extract the PR message, ensuring correct matching of the '## Flux HelmRelease Update Summary' header.

--- a/.github/workflows/flux-updater.yml
+++ b/.github/workflows/flux-updater.yml
@@ -73,7 +73,7 @@ jobs:
           echo "has_changes=true" >> $GITHUB_OUTPUT
           
           # Extract the PR message starting from "## Flux HelmRelease Update Summary"
-          PR_MESSAGE=$(echo "$OUTPUT" | sed -n '/^## Flux HelmRelease Update Summary/,$p')
+          PR_MESSAGE=$(echo "$OUTPUT" | sed -n '/## Flux HelmRelease Update Summary/,$p')
           
           # Save the PR message to output (escape newlines for GitHub Actions)
           {
