--- a/.github/workflows/flux-updater.yml
+++ b/.github/workflows/flux-updater.yml
@@ -72,8 +72,12 @@ jobs:
           echo "Changes detected"
           echo "has_changes=true" >> $GITHUB_OUTPUT
           
-          # Extract the PR message starting from "## Flux HelmRelease Update Summary"
-          PR_MESSAGE=$(echo "$OUTPUT" | sed -n '/## Flux HelmRelease Update Summary/,$p')
+          # Extract and clean up the PR message
+          PR_MESSAGE=$(echo "$OUTPUT" | \
+            sed -n '/## Flux HelmRelease Update Summary/,/^\[INF\] Application is shutting down\.\.\./p' | \
+            head -n -1 | \
+            sed 's/^[ \t]*//' | \
+            sed '/^$/d')
           
           # Save the PR message to output (escape newlines for GitHub Actions)
           {
