Add Gateway API, KGateway, Aspire Dashboard, and docs
Introduces Gateway API CRDs, KGateway (Envoy-based Gateway), Aspire Dashboard for unified observability, and OpenTelemetry collector configuration. Updates Prometheus, Cert Manager, and OpenTelemetry Helm releases. Adds comprehensive documentation (architecture, getting started, observability), contribution and security policies, and GitHub issue/pr templates. Removes legacy nginx ingress and migrates gateway configuration to vega-gateway.

--- a/base/aspire-dashboard-flux.yaml
+++ b/base/aspire-dashboard-flux.yaml
@@ -1,14 +1,17 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: nginx-flux
+  name: aspire-dashboard-flux
   namespace: flux-system
 spec:
   interval: 10m0s
   sourceRef:
     kind: GitRepository
     name: vdk-flux
-  path: ./modules/nginx
+  dependsOn:
+    - name: opentel-flux
+    - name: vega-gateway-flux
+  path: ./modules/aspire-dashboard
   prune: true
   wait: true
   timeout: 5m0s
