--- a/modules/kgateway/helm-release-crds.yaml
+++ b/modules/kgateway/helm-release-crds.yaml
@@ -1,31 +1,24 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: cert-manager
+  name: kgateway-crds
   namespace: flux-system
 spec:
-  releaseName: cert-manager
-  targetNamespace: cert-manager
+  targetNamespace: kgateway-system
   interval: 10m
   chart:
     spec:
-      chart: cert-manager
-      version: "v1.19.2"
+      chart: kgateway-crds
+      version: "2.1.0"
       sourceRef:
         kind: HelmRepository
-        name: cert-manager
+        name: kgateway
         namespace: flux-system
       interval: 12h
   install:
-    crds: CreateReplace
     createNamespace: true
     remediation:
       retries: -1
   upgrade:
-    crds: CreateReplace
     remediation:
       retries: -1
-  values:
-    crds:
-      enabled: true
-...
