--- a/modules/prometheus/helm-release.yaml
+++ b/modules/prometheus/helm-release.yaml
@@ -1,4 +1,4 @@
-﻿apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: kube-prometheus-stack
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: kube-prometheus-stack
-      version: "9.4.9"
+      version: "81.2.0"
       sourceRef:
         kind: HelmRepository
         name: prometheus-community
